<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textWelcomeMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:text="@string/welcome_nfarmer_merchant_worker_nlogin_here"
                android:textAlignment="center"
                android:textColor="#14C51B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/loginImg"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/textWelcomeMessage"
                android:layout_centerInParent="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/login_logo"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginImg"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/enter_user_i_d"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="6dp"
                android:textAlignment="center"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailAddress"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="6dp"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck"
                android:autofillHints="" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="42dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginbtn"
                android:layout_marginStart="68dp"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textColor="#E40707"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/registerUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginbtn"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="68dp"
                android:text="@string/register_user"
                android:textColor="#E40707"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/loginWithOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginbtn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="2dp"
                android:text="@string/or_n_n_login_with_other_account"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/facebook_login"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_below="@+id/loginWithOther"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/facebook"
                android:contentDescription="TODO" />
            <ImageView
                android:id="@+id/google_login"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_below="@+id/facebook_login"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/google"
                android:contentDescription="@string/todo" />

            <ProgressBar
                android:id="@+id/progressBar_loginScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>